# backend/entity/repository/schedule_repo.go
@@ -1,0 +1,8 @@
+package repository
+
+import "backend/entity/model"
+
+type ScheduleRepository interface {
+	CreateSchedule(schedule *model.Schedule) string
+	DeleteSchedule(id string)
+}
