# backend/infrastructure/datastore/schedule_db.go
@@ -1,0 +1,23 @@
+package datastore
+
+import (
+	"backend/entity/model"
+	"backend/entity/repository"
+	"backend/infrastructure/datastore/mysql"
+)
+
+type ScheduleRepository struct {
+	mysql.MySQLHandler
+}
+
+func NewScheduleRepository(sqlHandler mysql.MySQLHandler) repository.ScheduleRepository {
+	scheduleRepository := ScheduleRepository{sqlHandler}
+	return &scheduleRepository
+}
+
+func (scheduleRepo *ScheduleRepository) CreateSchedule(schedule *model.Schedule) string {
+	return "ok"
+}
+
+func (scheduleRepo *ScheduleRepository) DeleteSchedule(id string) {
+}
