# swagger/src/reference/swagger.yaml
@@ -9,67 +9,111 @@ info:
 servers:
   - url: 'http://localhost:8000'
 paths:
-  '/user/{username}':
-    parameters:
-      - schema:
-          type: string
-        name: username
-        in: path
-        required: true
-    get:
-      summary: Get User Info by User ID
-      tags: []
+  /schedule:
+    post:
+      summary: post-schedule-create
+      tags:
+        - schedule
       responses:
         '200':
-          $ref: '#/components/responses/UserInfo'
-        '404':
-          description: Not Found
-      operationId: get-users-username
-      description: |-
-        ユーザーネームからスケジュールを返す
-        スケジュールに関してはその月のもののみ返す
-      parameters:
-        - $ref: '#/components/parameters/page'
-    patch:
-      summary: Update User Information
-      operationId: patch-users-username
-      responses:
-        '200':
-          $ref: '#/components/responses/UpdateResult'
-        '401':
-          description: Unauthorized
-      description: ユーザーの情報を更新
+          description: OK
+          content:
+            application/json:
+              schema:
+                description: ''
+                type: object
+                x-examples:
+                  example-1:
+                    id: string
+                properties:
+                  id:
+                    type: string
+                    minLength: 1
+                    description: 作成したスケジュールのidを返す
+                required:
+                  - id
+              examples:
+                example-1:
+                  value:
+                    id: string
+      operationId: post-schedule
+      description: 情報を元にスケジュールを新規作成する
+      parameters: []
+      security:
+        - Firebase: []
       requestBody:
         content:
           application/json:
             schema:
               description: ''
+              type: object
               x-examples:
                 example-1:
-                  name: string
-                  schedule_title: string
-              anyOf:
-                - properties:
-                    name:
-                      type: string
-                      minLength: 1
-                    schedule_title:
-                      type: string
-                      minLength: 1
-              type: object
+                  about: string
+                  emoji: string
+                  date: '2019-08-24'
+                  start_date: '14:15:22Z'
+                  end_date: '14:15:22Z'
+                  place: string
+                  title: string
+                  url: 'http://example.com'
+              properties:
+                about:
+                  type: string
+                  minLength: 1
+                emoji:
+                  type: string
+                  minLength: 1
+                date:
+                  type: string
+                  minLength: 1
+                start_date:
+                  type: string
+                  minLength: 1
+                end_date:
+                  type: string
+                  minLength: 1
+                place:
+                  type: string
+                  minLength: 1
+                title:
+                  type: string
+                  minLength: 1
+                url:
+                  type: string
+                  minLength: 1
+              required:
+                - date
+                - start_date
+                - title
             examples:
-              change both:
+              example-1:
                 value:
-                  name: string
-                  schedule_title: string
-              change name:
-                value:
-                  name: changed name
-                  schedule_title: default value
-        description: |-
-          ユーザーを更新する
-          一方の更新・両方の更新どちらも可能であるがどちらの場合でもあっても全ての要素を送信する
-      parameters: []
+                  about: string
+                  emoji: string
+                  date: '2019-08-24'
+                  start_date: '14:15:22Z'
+                  end_date: '14:15:22Z'
+                  place: string
+                  title: string
+                  url: 'http://example.com'
+        description: idを除いたスケジュールモデルを想定
+    delete:
+      summary: delete-schedule
+      operationId: delete-schedule
+      responses:
+        '200':
+          description: OK
+      description: |-
+        スケジュールを削除する
+
+        現時点では完全削除だが削除後に削除フラグを立てて赤く表示でも良いかも
+      parameters:
+        - schema:
+            type: string
+          in: header
+          name: bearer
+          description: firebase auth jwt
       security:
         - Firebase: []
   /user:
@@ -112,55 +156,68 @@ paths:
       parameters: []
       security:
         - Firebase: []
-  /schedule:
-    post:
-      summary: post-schedule-create
-      tags:
-        - schedule
+  '/user/{username}':
+    parameters:
+      - schema:
+          type: string
+        name: username
+        in: path
+        required: true
+    get:
+      summary: Get User Info by User ID
+      tags: []
       responses:
         '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                description: ''
-                type: object
-                x-examples:
-                  example-1:
-                    id: string
-                properties:
-                  id:
-                    type: string
-                    minLength: 1
-                    description: 作成したスケジュールのidを返す
-                required:
-                  - id
-      operationId: post-schedule
-      description: 情報を元にスケジュールを新規作成する
-      parameters: []
-      security:
-        - Firebase: []
+          $ref: '#/components/responses/UserInfo'
+        '404':
+          description: Not Found
+      operationId: get-users-username
+      description: |-
+        ユーザーネームからスケジュールを返す
+        スケジュールに関してはクエリで指定された年・月のもののみ返す
+      parameters:
+        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/month'
+    patch:
+      summary: Update User Information
+      operationId: patch-users-username
+      responses:
+        '200':
+          $ref: '#/components/responses/UserUpdateResult'
+        '401':
+          description: Unauthorized
+      description: ユーザーの情報を更新
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Schedule'
-    delete:
-      summary: delete-schedule
-      operationId: delete-schedule
-      responses:
-        '200':
-          description: OK
-      description: |-
-        スケジュールを削除する
-
-        現時点では完全削除だが削除後に削除フラグを立てて赤く表示でも良いかも
-      parameters:
-        - schema:
-            type: string
-          in: header
-          name: bearer
-          description: firebase auth jwt
+              description: ''
+              x-examples:
+                example-1:
+                  name: string
+                  schedule_title: string
+              anyOf:
+                - properties:
+                    name:
+                      type: string
+                      minLength: 1
+                    schedule_title:
+                      type: string
+                      minLength: 1
+              type: object
+            examples:
+              change both:
+                value:
+                  name: string
+                  schedule_title: string
+              change name:
+                value:
+                  name: changed name
+                  schedule_title: default value
+        description: |-
+          ユーザーを更新する
+          一方の更新・両方の更新どちらも可能であるがどちらの場合でもあっても全ての要素を送信する
+      parameters: []
       security:
         - Firebase: []
   '/user/{username}/info':
@@ -250,6 +307,20 @@ components:
           place: string
           title: string
           url: string
+      examples:
+        - id: string
+          about: string
+          emoji: string
+          date: '2019-08-24'
+          start_date: '14:15:22Z'
+          end_date: '14:15:22Z'
+          place: string
+          title: string
+          url: 'http://example.com'
+        - id: string
+          date: '2019-08-24'
+          start_date: '14:15:22Z'
+          title: string
       properties:
         id:
           type: string
@@ -281,14 +352,13 @@ components:
         url:
           type: string
           minLength: 1
+          format: uri
       required:
         - id
         - emoji
         - date
         - start_date
-        - place
         - title
-        - url
   securitySchemes:
     Firebase:
       type: oauth2
@@ -299,7 +369,7 @@ components:
           scopes: {}
       description: ''
   responses:
-    UpdateResult:
+    UserUpdateResult:
       description: Example response
       content:
         application/json:
@@ -403,10 +473,18 @@ components:
               - sns
   parameters:
     page:
-      name: page
+      name: year
       in: query
       schema:
-        type: number
-      description: ページネーションのページ数
+        type: string
+      description: 検索したい年
+      required: true
+    month:
+      name: month
+      in: query
+      required: true
+      schema:
+        type: string
+      description: 検索したい月
 security:
   - Firebase: []
